Add paths to `pull_request`

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,6 +2,13 @@ name: Frontend
 
 on:
   pull_request:
+    paths:
+    - '**/frontend/**'
+    - 'shared/**'
+    - 'docs/**'
+    - '**/package.json'
+    - '**/yarn.lock'
+    - '.github/workflows/**'
   push:
     branches:
       - master
