--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -2,6 +2,16 @@ name: Frontend Tests
 
 on:
   pull_request:
+    paths:
+    - '**/frontend/**'
+    - '!frontend/test/e2e/**'
+    - '!**/*.cy.*'
+    - '!**/*cypress*'
+    - '!**/*.md'
+    - 'shared/**'
+    - '**/package.json'
+    - '**/yarn.lock'
+    - '.github/workflows/**'
   push:
     branches:
       - master
