--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,14 +1,11 @@
-name: E2E Tests
+name: Cypress GH Action
 
 on:
   push:
-    branches:
-      - 'master'
 
 jobs:
-
   build:
-    runs-on: buildjet-2vcpu-ubuntu-2004
+    runs-on: ubuntu-20.04
     timeout-minutes: 25
     strategy:
       matrix:
@@ -49,7 +46,7 @@ jobs:
           ./SHA256.sum
 
   e2e-tests:
-    runs-on: buildjet-2vcpu-ubuntu-2004
+    runs-on: ubuntu-20.04
     timeout-minutes: 20
     needs: build
     name: e2e-tests-${{ matrix.folder }}-${{ matrix.edition }}
